import "Organizations/BlockStatus.proto";

package Diadoc.Api.Proto.Organizations;

option java_outer_classname = "OrganizationFeaturesProtos";

message OrganizationFeatures
{
    required BlockStatus BlockStatus = 1;
    repeated string Features = 2;
}